syntax = "proto3";
package ixo.iid.v1beta1;

import "gogoproto/gogo.proto";
import "ixo/iid/v1beta1/iid.proto";

option go_package = "github.com/ixofoundation/ixo-blockchain/x/iid/types";

// GenesisState defines the did module's genesis state.
message GenesisState {
  repeated IidDocument iid_docs = 1 [ (gogoproto.nullable) = false ];
}